create function for new year feature

--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -305,81 +305,127 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Chinese New Year Date</th>\n",
-       "      <th>Last Chinese New Year Date</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Category Code</th>\n",
+       "      <th>Item Code</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Last New Year Sales</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-02-12</td>\n",
-       "      <td>2020-01-25</td>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>102900005115762</td>\n",
+       "      <td>41.046</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>2021-02-12</td>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>102900005115779</td>\n",
+       "      <td>335.728</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-01-22</td>\n",
-       "      <td>2022-02-01</td>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>102900005115786</td>\n",
+       "      <td>68.112</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-02-10</td>\n",
-       "      <td>2023-01-22</td>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>102900005115793</td>\n",
+       "      <td>68.608</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-02-05</td>\n",
-       "      <td>2020-01-18</td>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>102900005115823</td>\n",
+       "      <td>114.760</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2021-02-06</td>\n",
-       "      <td>2020-01-19</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2021-02-07</td>\n",
-       "      <td>2020-01-20</td>\n",
+       "      <th>46594</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>102900011031926</td>\n",
+       "      <td>7.600</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2021-02-08</td>\n",
-       "      <td>2020-01-21</td>\n",
+       "      <th>46595</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>102900011034330</td>\n",
+       "      <td>44.000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2021-02-09</td>\n",
-       "      <td>2020-01-22</td>\n",
+       "      <th>46596</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>102900011035740</td>\n",
+       "      <td>5.800</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2021-02-10</td>\n",
-       "      <td>2020-01-23</td>\n",
+       "      <th>46597</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>106949711300259</td>\n",
+       "      <td>25.200</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46598</th>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>106971533450003</td>\n",
+       "      <td>14.400</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>46599 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Chinese New Year Date Last Chinese New Year Date\n",
-       "0            2021-02-12                 2020-01-25\n",
-       "1            2022-02-01                 2021-02-12\n",
-       "2            2023-01-22                 2022-02-01\n",
-       "3            2024-02-10                 2023-01-22\n",
-       "4            2021-02-05                 2020-01-18\n",
-       "5            2021-02-06                 2020-01-19\n",
-       "6            2021-02-07                 2020-01-20\n",
-       "7            2021-02-08                 2020-01-21\n",
-       "8            2021-02-09                 2020-01-22\n",
-       "9            2021-02-10                 2020-01-23"
+       "            Date  Category Code        Item Code    Sales  Last New Year Sales\n",
+       "0     2020-07-01     1011010101  102900005115762   41.046                  NaN\n",
+       "1     2020-07-01     1011010101  102900005115779  335.728                  NaN\n",
+       "2     2020-07-01     1011010101  102900005115786   68.112                  NaN\n",
+       "3     2020-07-01     1011010101  102900005115793   68.608                  NaN\n",
+       "4     2020-07-01     1011010101  102900005115823  114.760                  NaN\n",
+       "...          ...            ...              ...      ...                  ...\n",
+       "46594 2023-06-30     1011010801  102900011031926    7.600                  NaN\n",
+       "46595 2023-06-30     1011010801  102900011034330   44.000                  NaN\n",
+       "46596 2023-06-30     1011010801  102900011035740    5.800                  NaN\n",
+       "46597 2023-06-30     1011010801  106949711300259   25.200                  NaN\n",
+       "46598 2023-06-30     1011010801  106971533450003   14.400                  NaN\n",
+       "\n",
+       "[46599 rows x 5 columns]"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -413,13 +459,18 @@
     "    return df\n",
     "\n",
     "def create_last_new_year_feature(df: pd.DataFrame,\n",
-    "                                 df_newyear: pd.DataFrame,\n",
     "                                 days_before_after: int):\n",
     "    \n",
     "    # Get start and end year to generate Chinese New Year DataFrame from input data\n",
     "    start_year = dt.strptime(df['Date'].min(), '%Y-%m-%d').year\n",
     "    end_year = dt.strptime(df['Date'].max(), '%Y-%m-%d').year\n",
     "    \n",
+    "    # Get Chinese New Year DataFrame\n",
+    "    df_chinese_new_year = get_chinese_new_year_dates(start_year = start_year,\n",
+    "                                                     end_year = end_year)\n",
+    "    df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year,\n",
+    "                                                             days = 7)\n",
+    "\n",
     "    # Cast date column\n",
     "    df['Date'] = pd.to_datetime(df['Date'])\n",
     "\n",
@@ -439,10 +490,7 @@
     "                  on = ['Date', 'Category Code', 'Item Code'],\n",
     "                  how = 'left')\n",
     "\n",
-    "df_chinese_new_year = get_chinese_new_year_dates(2020, 2024)\n",
-    "df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year, days = 7)\n",
-    "\n",
-    "display(df_chinese_new_year_period.head(10))"
+    "    return df"
    ]
   },
   {
