--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4  2020-07-01     1011010101  102900005115823  114.760"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_chinese_new_year_dates(start_year, end_year):\n",
+    "    chinese_new_year_dates = []\n",
+    "\n",
+    "    for year in range(start_year, end_year + 1):\n",
+    "        lunar_date = LunarDate(year, 1, 1)\n",
+    "        cny_date = pd.Timestamp(lunar_date.toSolarDate())\n",
+    "\n",
+    "        chinese_new_year_dates.append({'Chinese New Year Date': cny_date})\n",
+    "\n",
+    "    chinese_new_year_df = pd.DataFrame(chinese_new_year_dates)\n",
+    "    chinese_new_year_df['Last Chinese New Year Date'] = chinese_new_year_df['Chinese New Year Date'].shift(1)\n",
+    "    chinese_new_year_df.dropna(subset=['Last Chinese New Year Date'], inplace = True)\n",
+    "    \n",
+    "    return chinese_new_year_df\n",
+    "\n",
+    "def get_chinese_new_year_period(df, days):\n",
+    "    days = 7\n",
+    "    # new_years = df['Chinese New Year Date'].unique()\n",
+    "    # for new_year in new_years:\n",
+    "    new_year_dict = dict(zip(df['Chinese New Year Date'], df['Last Chinese New Year Date']))\n",
+    "    for this_year, last_year in new_year_dict.items():\n",
+    "        for day in range(-days, days + 1):\n",
+    "            if day != 0:\n",
+    "                df = pd.concat([df, pd.DataFrame({'Chinese New Year Date': [this_year + timedelta(days = day)],\n",
+    "                                                  'Last Chinese New Year Date': [last_year + timedelta(days = day)]})],\n",
+    "                               axis = 0,\n",
+    "                               ignore_index = True)\n",
+    "    return df\n",
+    "\n",
+    "def create_last_new_year_feature(df: pd.DataFrame,\n",
+    "                                 days_before_after: int):\n",
+    "    \n",
+    "    # Get start and end year to generate Chinese New Year DataFrame from input data\n",
+    "    start_year = dt.strptime(df['Date'].min(), '%Y-%m-%d').year\n",
+    "    end_year = dt.strptime(df['Date'].max(), '%Y-%m-%d').year\n",
+    "    \n",
+    "    # Get Chinese New Year DataFrame\n",
+    "    df_chinese_new_year = get_chinese_new_year_dates(start_year = start_year,\n",
+    "                                                     end_year = end_year)\n",
+    "    df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year,\n",
+    "                                                             days = 7)\n",
+    "\n",
+    "    # Cast date column\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "    # Merge current new year date with last new year date\n",
+    "    df_last_new_year = df.copy()\n",
+    "    df_last_new_year = df_last_new_year.merge(df_chinese_new_year_period,\n",
+    "                                              how = 'left',\n",
+    "                                              left_on = 'Date',\n",
+    "                                              right_on = 'Last Chinese New Year Date')\n",
+    "    # Cleanup DataFrame\n",
+    "    df_last_new_year = df_last_new_year[~df_last_new_year['Last Chinese New Year Date'].isna()][['Chinese New Year Date', 'Category Code', 'Item Code', 'Sales']]\n",
+    "\n",
+    "    # Change column name before merge avoiding duplicated columns\n",
+    "    df_last_new_year.columns = ['Date', 'Category Code', 'Item Code', 'Last New Year Sales']\n",
+    "\n",
+    "    # Merge current new year with current new year to get \"Last New Year Sales\"\n",
+    "    df = df.merge(df_last_new_year,\n",
+    "                  on = ['Date', 'Category Code', 'Item Code'],\n",
+    "                  how = 'left')\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -423,97 +494,16 @@
        "[46599 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_chinese_new_year_dates(start_year, end_year):\n",
-    "    chinese_new_year_dates = []\n",
-    "\n",
-    "    for year in range(start_year, end_year + 1):\n",
-    "        lunar_date = LunarDate(year, 1, 1)\n",
-    "        cny_date = pd.Timestamp(lunar_date.toSolarDate())\n",
-    "\n",
-    "        chinese_new_year_dates.append({'Chinese New Year Date': cny_date})\n",
-    "\n",
-    "    chinese_new_year_df = pd.DataFrame(chinese_new_year_dates)\n",
-    "    chinese_new_year_df['Last Chinese New Year Date'] = chinese_new_year_df['Chinese New Year Date'].shift(1)\n",
-    "    chinese_new_year_df.dropna(subset=['Last Chinese New Year Date'], inplace = True)\n",
-    "    \n",
-    "    return chinese_new_year_df\n",
-    "\n",
-    "def get_chinese_new_year_period(df, days):\n",
-    "    days = 7\n",
-    "    # new_years = df['Chinese New Year Date'].unique()\n",
-    "    # for new_year in new_years:\n",
-    "    new_year_dict = dict(zip(df['Chinese New Year Date'], df['Last Chinese New Year Date']))\n",
-    "    for this_year, last_year in new_year_dict.items():\n",
-    "        for day in range(-days, days + 1):\n",
-    "            if day != 0:\n",
-    "                df = pd.concat([df, pd.DataFrame({'Chinese New Year Date': [this_year + timedelta(days = day)],\n",
-    "                                                  'Last Chinese New Year Date': [last_year + timedelta(days = day)]})],\n",
-    "                               axis = 0,\n",
-    "                               ignore_index = True)\n",
-    "    return df\n",
-    "\n",
-    "def create_last_new_year_feature(df: pd.DataFrame,\n",
-    "                                 days_before_after: int):\n",
-    "    \n",
-    "    # Get start and end year to generate Chinese New Year DataFrame from input data\n",
-    "    start_year = dt.strptime(df['Date'].min(), '%Y-%m-%d').year\n",
-    "    end_year = dt.strptime(df['Date'].max(), '%Y-%m-%d').year\n",
-    "    \n",
-    "    # Get Chinese New Year DataFrame\n",
-    "    df_chinese_new_year = get_chinese_new_year_dates(start_year = start_year,\n",
-    "                                                     end_year = end_year)\n",
-    "    df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year,\n",
-    "                                                             days = 7)\n",
-    "\n",
-    "    # Cast date column\n",
-    "    df['Date'] = pd.to_datetime(df['Date'])\n",
-    "\n",
-    "    # Merge current new year date with last new year date\n",
-    "    df_last_new_year = df.copy()\n",
-    "    df_last_new_year = df_last_new_year.merge(df_chinese_new_year_period,\n",
-    "                                              how = 'left',\n",
-    "                                              left_on = 'Date',\n",
-    "                                              right_on = 'Last Chinese New Year Date')\n",
-    "    df_last_new_year = df_last_new_year[~df_last_new_year['Last Chinese New Year Date'].isna()][['Chinese New Year Date', 'Category Code', 'Item Code', 'Sales']]\n",
-    "\n",
-    "    # Change column name before merge avoiding duplicated columns\n",
-    "    df_last_new_year.columns = ['Date', 'Category Code', 'Item Code', 'Last New Year Sales']\n",
-    "\n",
-    "    # Merge current new year with current new year to get \"Last New Year Sales\"\n",
-    "    df = df.merge(df_last_new_year,\n",
-    "                  on = ['Date', 'Category Code', 'Item Code'],\n",
-    "                  how = 'left')\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2023"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "grouping_column = ['Date', 'Category Code', 'Item Code']\n",
     "df_temp = df_agg.copy()\n",
-    "start_year = dt.strptime(df_temp['Date'].min(), '%Y-%m-%d').year\n",
-    "end_year = dt.strptime(df_temp['Date'].max(), '%Y-%m-%d').year\n",
-    "end_year"
+    "create_last_new_year_feature(df = df_temp,\n",
+    "                             days_before_after = 7)"
    ]
   },
   {
