--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,10 @@
     "\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
        "4  2020-07-01     1011010101  102900005115823  114.760"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Memory: 0.36 MB\n",
+      "Start Memory: 1.42 MB\n",
       "End Memory: 0.36 MB\n"
      ]
     },
@@ -444,7 +447,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +656,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -672,14 +675,6 @@
      "output_type": "stream",
      "text": [
       "Catgory Trainig: 1011010101\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -991,18 +986,10 @@
       "[3500]\tvalidation_0-rmse:90.31506\tvalidation_1-rmse:193.01939\n",
       "[3600]\tvalidation_0-rmse:89.52890\tvalidation_1-rmse:193.04488\n",
       "[3700]\tvalidation_0-rmse:88.87067\tvalidation_1-rmse:193.35575\n",
-      "[3761]\tvalidation_0-rmse:88.47079\tvalidation_1-rmse:193.65549\n",
+      "[3760]\tvalidation_0-rmse:88.47543\tvalidation_1-rmse:193.64992\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010201\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -1313,18 +1300,10 @@
       "[3400]\tvalidation_0-rmse:48.71495\tvalidation_1-rmse:70.34590\n",
       "[3500]\tvalidation_0-rmse:48.44239\tvalidation_1-rmse:70.28021\n",
       "[3600]\tvalidation_0-rmse:48.14522\tvalidation_1-rmse:70.28515\n",
-      "[3684]\tvalidation_0-rmse:47.91029\tvalidation_1-rmse:70.29109\n",
+      "[3683]\tvalidation_0-rmse:47.91281\tvalidation_1-rmse:70.29140\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010402\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -1615,18 +1594,10 @@
       "[1400]\tvalidation_0-rmse:90.56408\tvalidation_1-rmse:69.51302\n",
       "[1500]\tvalidation_0-rmse:88.65685\tvalidation_1-rmse:69.12913\n",
       "[1600]\tvalidation_0-rmse:86.99356\tvalidation_1-rmse:69.33264\n",
-      "[1687]\tvalidation_0-rmse:85.72131\tvalidation_1-rmse:69.70204\n",
+      "[1688]\tvalidation_0-rmse:85.70736\tvalidation_1-rmse:69.71097\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010501\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -1921,18 +1892,10 @@
       "[1800]\tvalidation_0-rmse:36.98330\tvalidation_1-rmse:24.75116\n",
       "[1900]\tvalidation_0-rmse:36.33814\tvalidation_1-rmse:24.70817\n",
       "[2000]\tvalidation_0-rmse:35.77479\tvalidation_1-rmse:24.77703\n",
-      "[2082]\tvalidation_0-rmse:35.36823\tvalidation_1-rmse:24.87809\n",
+      "[2081]\tvalidation_0-rmse:35.37294\tvalidation_1-rmse:24.87562\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010504\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -2243,18 +2206,10 @@
       "[3400]\tvalidation_0-rmse:188.41538\tvalidation_1-rmse:183.22570\n",
       "[3500]\tvalidation_0-rmse:188.17108\tvalidation_1-rmse:183.20571\n",
       "[3600]\tvalidation_0-rmse:187.94987\tvalidation_1-rmse:183.33176\n",
-      "[3644]\tvalidation_0-rmse:187.85202\tvalidation_1-rmse:183.45621\n",
+      "[3645]\tvalidation_0-rmse:187.83880\tvalidation_1-rmse:183.47518\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010801\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_770/1012734748.py:26: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  df_category = df_category.groupby(['Date', 'Category Code'], as_index = False)['Sales'].sum()\n"
      ]
     },
     {
@@ -2567,7 +2522,7 @@
       "[3600]\tvalidation_0-rmse:71.20615\tvalidation_1-rmse:182.16426\n",
       "[3700]\tvalidation_0-rmse:70.72366\tvalidation_1-rmse:182.02792\n",
       "[3800]\tvalidation_0-rmse:70.19055\tvalidation_1-rmse:182.18865\n",
-      "[3897]\tvalidation_0-rmse:69.70510\tvalidation_1-rmse:182.31095\n",
+      "[3898]\tvalidation_0-rmse:69.69966\tvalidation_1-rmse:182.30871\n",
       "--------------------------------------------\n",
       "\n"
      ]
