change dtypes of date dimension

--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4  2020-07-01     1011010101  102900005115823  114.760"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,6 +249,13 @@
     "    df['DayOfWeek'] = df['Date'].dt.dayofweek  # Monday is 0 and Sunday is 6\n",
     "    df['WeekNumber'] = df['Date'].dt.isocalendar().week\n",
     "    df['Quarter'] = df['Date'].dt.quarter\n",
+    "\n",
+    "    df['Year'] = df['Year'].astype('category')\n",
+    "    df['Month'] = df['Month'].astype('category')\n",
+    "    df['Day'] = df['Day'].astype('category')\n",
+    "    df['DayOfWeek'] = df['DayOfWeek'].astype('category')\n",
+    "    df['WeekNumber'] = df['WeekNumber'].astype('category')\n",
+    "    df['Quarter'] = df['Quarter'].astype('category')\n",
     "    \n",
     "    return df\n",
     "\n",
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +454,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -653,6 +660,18 @@
       "Catgory Trainig: 1011010101\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:478.74888\tvalidation_1-rmse:414.15915\n",
       "[200]\tvalidation_0-rmse:423.82627\tvalidation_1-rmse:418.25090\n",
@@ -662,6 +681,18 @@
       "Catgory Trainig: 1011010201\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:203.79759\tvalidation_1-rmse:187.00385\n",
       "[200]\tvalidation_0-rmse:183.51000\tvalidation_1-rmse:175.47305\n",
@@ -675,6 +706,18 @@
       "Catgory Trainig: 1011010402\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:296.60843\tvalidation_1-rmse:220.22168\n",
       "[200]\tvalidation_0-rmse:268.29173\tvalidation_1-rmse:187.87342\n",
@@ -688,6 +731,18 @@
       "Catgory Trainig: 1011010501\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:136.08772\tvalidation_1-rmse:123.65674\n",
       "[200]\tvalidation_0-rmse:123.94751\tvalidation_1-rmse:104.46125\n",
@@ -697,12 +752,24 @@
       "[1000]\tvalidation_0-rmse:95.40897\tvalidation_1-rmse:71.07294\n",
       "[1200]\tvalidation_0-rmse:91.81886\tvalidation_1-rmse:68.93924\n",
       "[1400]\tvalidation_0-rmse:88.60456\tvalidation_1-rmse:68.53747\n",
-      "[1561]\tvalidation_0-rmse:86.45533\tvalidation_1-rmse:68.74526\n",
+      "[1560]\tvalidation_0-rmse:86.47042\tvalidation_1-rmse:68.73446\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010504\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:701.64958\tvalidation_1-rmse:557.93011\n",
       "[200]\tvalidation_0-rmse:621.93053\tvalidation_1-rmse:498.67765\n",
@@ -729,13 +796,25 @@
       "Catgory Trainig: 1011010801\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
+      "Category Code          category\n",
+      "Sales_365_daylag        float32\n",
+      "Sales_364_daylag        float32\n",
+      "Last New Year Sales     float32\n",
+      "is_holiday                int64\n",
+      "Year                      int32\n",
+      "Month                     int32\n",
+      "Day                       int32\n",
+      "DayOfWeek                 int32\n",
+      "WeekNumber               UInt32\n",
+      "Quarter                   int32\n",
+      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:381.64758\tvalidation_1-rmse:419.00650\n",
       "[200]\tvalidation_0-rmse:339.73127\tvalidation_1-rmse:403.92678\n",
       "[400]\tvalidation_0-rmse:306.79835\tvalidation_1-rmse:397.67258\n",
       "[600]\tvalidation_0-rmse:280.31443\tvalidation_1-rmse:395.74030\n",
       "[800]\tvalidation_0-rmse:259.13076\tvalidation_1-rmse:395.98187\n",
-      "[846]\tvalidation_0-rmse:254.49157\tvalidation_1-rmse:396.32258\n",
+      "[847]\tvalidation_0-rmse:254.38938\tvalidation_1-rmse:396.32750\n",
       "--------------------------------------------\n",
       "\n"
      ]
