--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,39 +660,15 @@
       "Catgory Trainig: 1011010101\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:478.74888\tvalidation_1-rmse:414.15915\n",
       "[200]\tvalidation_0-rmse:423.82627\tvalidation_1-rmse:418.25090\n",
-      "[257]\tvalidation_0-rmse:410.46683\tvalidation_1-rmse:422.89561\n",
+      "[258]\tvalidation_0-rmse:410.24521\tvalidation_1-rmse:422.99006\n",
       "--------------------------------------------\n",
       "\n",
       "Catgory Trainig: 1011010201\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:203.79759\tvalidation_1-rmse:187.00385\n",
       "[200]\tvalidation_0-rmse:183.51000\tvalidation_1-rmse:175.47305\n",
@@ -706,18 +682,6 @@
       "Catgory Trainig: 1011010402\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:296.60843\tvalidation_1-rmse:220.22168\n",
       "[200]\tvalidation_0-rmse:268.29173\tvalidation_1-rmse:187.87342\n",
@@ -731,18 +695,6 @@
       "Catgory Trainig: 1011010501\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:136.08772\tvalidation_1-rmse:123.65674\n",
       "[200]\tvalidation_0-rmse:123.94751\tvalidation_1-rmse:104.46125\n",
@@ -758,18 +710,6 @@
       "Catgory Trainig: 1011010504\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:701.64958\tvalidation_1-rmse:557.93011\n",
       "[200]\tvalidation_0-rmse:621.93053\tvalidation_1-rmse:498.67765\n",
@@ -796,18 +736,6 @@
       "Catgory Trainig: 1011010801\n",
       "Train size: 871 | 80.28%\n",
       "Test size: 214 | 19.72%\n",
-      "Category Code          category\n",
-      "Sales_365_daylag        float32\n",
-      "Sales_364_daylag        float32\n",
-      "Last New Year Sales     float32\n",
-      "is_holiday                int64\n",
-      "Year                      int32\n",
-      "Month                     int32\n",
-      "Day                       int32\n",
-      "DayOfWeek                 int32\n",
-      "WeekNumber               UInt32\n",
-      "Quarter                   int32\n",
-      "dtype: object\n",
       "Training...\n",
       "[0]\tvalidation_0-rmse:381.64758\tvalidation_1-rmse:419.00650\n",
       "[200]\tvalidation_0-rmse:339.73127\tvalidation_1-rmse:403.92678\n",
@@ -847,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1065,6 +993,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
